# BachelorArbeit

./: README.md
Code-Abgabe/: TunerApp.rar
Code-Abgabe/tuner-app/: .gitignore  CMakeLists.txt  README.md
Code-Abgabe/tuner-app (1)/: RadioUI.pro  bilder.qrc  seiten.qrc
Code-Abgabe/tuner-app (1)/qml/: main.qml  radio.qml
Code-Abgabe/tuner-app (1)/sources/: dab_table_entry.h  http.cpp  http.h  json.cpp  main.cpp  parameters.h  radio_hal.cpp  radio_main_widget.h  radio_methods.cpp  radio_properties.h  radio_station_model.cpp  radio_stations.h
Code-Abgabe/tuner-app/sources/: dab_table_entry.cpp  http.h  radio_hal.h  radio_methods.h  radio_properties.cpp  radio_station_model.h  statusDialog.cpp  statusDialog.h
Literatur/: Fachliteratur.bib
Software-Diagramme/: Systemarchitektur.drawio
UML-Diagramme/: Unbenanntes Diagramm.drawio
